--- a/MvcApplication1/MvcApplication1.csproj
+++ b/MvcApplication1/MvcApplication1.csproj
@@ -144,6 +144,7 @@
     <Content Include="Content\images\DNA.png" />
     <Content Include="Content\images\ENV.png" />
     <Content Include="Content\images\facebook.png" />
+    <Content Include="Content\images\gh.png" />
     <Content Include="Content\images\glyphicons-halflings-white.png" />
     <Content Include="Content\images\glyphicons-halflings.png" />
     <Content Include="Content\images\logo.png" />
