--- a/MvcApplication1/MvcApplication1.csproj
+++ b/MvcApplication1/MvcApplication1.csproj
@@ -141,7 +141,7 @@
     <Content Include="Content\bootstrap-responsive.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\edge3.png" />
+    <Content Include="Content\images\edge3.png" />
     <Content Include="Content\images\DNA.png" />
     <Content Include="Content\images\ENV.png" />
     <Content Include="Content\images\facebook.png" />
