Fix image in project

--- a/InvenietisPortal/InvenietisPortal.csproj
+++ b/InvenietisPortal/InvenietisPortal.csproj
@@ -142,16 +142,20 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\bg.jpg" />
+    <Content Include="Content\images\bg2.jpg" />
     <Content Include="Content\images\edge3.png" />
     <Content Include="Content\images\DNA.png" />
     <Content Include="Content\images\ENV.png" />
     <Content Include="Content\images\facebook.png" />
+    <Content Include="Content\images\f_logo-c-32.png" />
+    <Content Include="Content\images\f_logo-w-32.png" />
     <Content Include="Content\images\gh.png" />
     <Content Include="Content\images\glyphicons-halflings-white.png" />
     <Content Include="Content\images\glyphicons-halflings.png" />
     <Content Include="Content\images\logo.png" />
     <Content Include="Content\images\map-bw-med.png" />
     <Content Include="Content\images\map-bw.png" />
+    <Content Include="Content\images\map-c-med.png" />
     <Content Include="Content\images\map-mini-bw.png" />
     <Content Include="Content\images\map.png" />
     <Content Include="Content\images\marcker-b.png" />
@@ -159,9 +163,13 @@
     <Content Include="Content\images\menu.png" />
     <Content Include="Content\images\microsoft_black-tw-mini.png" />
     <Content Include="Content\images\microsoft_black-tw.png" />
+    <Content Include="Content\images\octocat-c-32.png" />
+    <Content Include="Content\images\octocat-w-32.png" />
     <Content Include="Content\images\shadow.png" />
     <Content Include="Content\images\tech.png" />
     <Content Include="Content\images\touch.png" />
+    <Content Include="Content\images\twitter-c-32.png" />
+    <Content Include="Content\images\twitter-w-32.png" />
     <Content Include="Content\images\twitter.png" />
     <Content Include="Content\logo-small.png" />
     <Content Include="Content\logo.png" />
