--- a/InvenietisPortal/packages.config
+++ b/InvenietisPortal/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CK.Core" version="2.7.43" targetFramework="net45" />
   <package id="dotless" version="1.3.1.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0-rc" targetFramework="net45" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
