--- a/InvenietisPortal/InvenietisPortal.csproj
+++ b/InvenietisPortal/InvenietisPortal.csproj
@@ -144,6 +144,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BlogArticle.cs" />
+    <Compile Include="Models\BlogArticlePublished.cs" />
+    <Compile Include="Models\BlogArticleStatus.cs" />
+    <Compile Include="Models\BlogContext.cs" />
+    <Compile Include="Models\BlogLanguage.cs" />
+    <Compile Include="Models\BlogRefreshResult.cs" />
+    <Compile Include="Models\BlogSource.cs" />
+    <Compile Include="Models\BlogSource.Refresh.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -270,12 +278,13 @@
     <Content Include="Views\Home\Contact.en.cshtml" />
     <Content Include="Views\Home\Legal.en.cshtml" />
     <Content Include="Views\Shared\_GoogleTag.cshtml" />
-    <Content Include="Views\Blog\Index.cshtml" />
-    <Content Include="Views\Blog\Admin.cshtml" />
+    <Content Include="Views\Home\Blog.en.cshtml" />
+    <Content Include="Views\Home\Admin.cshtml" />
+    <Content Include="Views\Home\Blog.fr.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
+    <Folder Include="Views\Blog\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
