--- a/InvenietisPortal/InvenietisPortal.csproj
+++ b/InvenietisPortal/InvenietisPortal.csproj
@@ -151,6 +151,17 @@
     <Content Include="Content\fonts\conduit_itc_light_italic-webfont.svg" />
     <Content Include="Content\images\bg.jpg" />
     <Content Include="Content\images\bg2.jpg" />
+    <Content Include="Content\images\ck-multiplan\Adobe-Acrobat.png" />
+    <Content Include="Content\images\ck-multiplan\Adobe-PDF-Export.png" />
+    <Content Include="Content\images\ck-multiplan\Doctor.png" />
+    <Content Include="Content\images\ck-multiplan\Document-Check.png" />
+    <Content Include="Content\images\ck-multiplan\Excel-Export.png" />
+    <Content Include="Content\images\ck-multiplan\Export-Word.png" />
+    <Content Include="Content\images\ck-multiplan\Gear.png" />
+    <Content Include="Content\images\ck-multiplan\Microsoft-Excel-2013-02.png" />
+    <Content Include="Content\images\ck-multiplan\Microsoft-Word-01.png" />
+    <Content Include="Content\images\ck-multiplan\Principal-01.png" />
+    <Content Include="Content\images\ck-multiplan\Remote-Control.png" />
     <Content Include="Content\images\edge3.png" />
     <Content Include="Content\images\DNA.png" />
     <Content Include="Content\images\ENV.png" />
@@ -186,6 +197,12 @@
     <Content Include="Content\images\twitter.png" />
     <Content Include="Content\logo-small.png" />
     <Content Include="Content\logo.png" />
+    <Content Include="Content\Site.css">
+      <DependentUpon>Site.less</DependentUpon>
+    </Content>
+    <Content Include="Content\Site.min.css">
+      <DependentUpon>Site.css</DependentUpon>
+    </Content>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -225,6 +242,9 @@
     <Content Include="Content\fonts\conduit_itc_light_italic-webfont.eot" />
     <Content Include="Content\fonts\conduit_itc_light_italic-webfont.ttf" />
     <Content Include="Content\fonts\conduit_itc_light_italic-webfont.woff" />
+    <Content Include="Content\Site.css.map">
+      <DependentUpon>Site.css</DependentUpon>
+    </Content>
     <None Include="Properties\PublishProfiles\WebSite.pubxml" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js">
@@ -279,6 +299,8 @@
     <Content Include="Views\Home\Contact.en.cshtml" />
     <Content Include="Views\Home\Legal.en.cshtml" />
     <Content Include="Views\Shared\_GoogleTag.cshtml" />
+    <Content Include="Views\Home\CKMultiPlan.fr.cshtml" />
+    <Content Include="Views\Home\CKMultiPlan.en.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
