--- a/InvenietisPortal/InvenietisPortal.csproj
+++ b/InvenietisPortal/InvenietisPortal.csproj
@@ -158,6 +158,16 @@
     </Compile>
     <Compile Include="Models\SupportEmailViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.fr.Designer.cs">
+      <DependentUpon>Resources.fr.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-responsive.css" />
@@ -277,15 +287,29 @@
     <Content Include="Views\Shared\_GoogleTag.cshtml" />
     <Content Include="Views\Home\CKMultiPlan.fr.cshtml" />
     <Content Include="Views\Home\CKMultiPlan.en.cshtml" />
-    <Content Include="Views\Home\_EmailNotSent.cshtml" />
-    <Content Include="Views\Home\_EmailSent.cshtml" />
-    <Content Include="Views\Home\_Form.cshtml" />
+    <Content Include="Views\Home\_EmailNotSent.en.cshtml" />
+    <Content Include="Views\Home\_EmailSent.fr.cshtml" />
+    <Content Include="Views\Home\_Form.fr.cshtml" />
+    <Content Include="Views\Email\SupportEmail.cshtml" />
+    <Content Include="Views\Home\_Form.en.cshtml" />
+    <Content Include="Views\Home\_EmailNotSent.fr.cshtml" />
+    <Content Include="Views\Home\_EmailSent.en.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.fr.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.fr.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
