Move to DNX451 because of CK.Database

--- a/Invenietis.LocalizedRoutes.Mvc/project.json
+++ b/Invenietis.LocalizedRoutes.Mvc/project.json
@@ -1,15 +1,15 @@
 {
-  "version": "1.0.0-*",
+  "version": "0.0.0",
   "description": "Invenietis.LocalizedRoutes.Mvc Class Library",
   "authors": [ "Invenietis" ],
   "tags": [ "" ],
   "projectUrl": "",
   "licenseUrl": "",
   "frameworks": {
-    "dnxcore50": {}
+    "net451": {}
   },
   "dependencies": {
-    "Invenietis.LocalizedRoutes": "1.0.0-*",
+    "Invenietis.LocalizedRoutes": "0.0.0",
     "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
     "Microsoft.AspNet.Routing": "1.0.0-rc1-final"
   }
