--- a/Invenietis.Web/project.json
+++ b/Invenietis.Web/project.json
@@ -1,12 +1,12 @@
 ﻿{
-  "version": "1.0.0-*",
+  "version": "0.0.0",
   "compilationOptions": {
     "emitEntryPoint": true
   },
 
   "dependencies": {
-    "Invenietis.LocalizedRoutes": "1.0.0-*",
-    "Invenietis.LocalizedRoutes.Mvc": "1.0.0-*",
+    "Invenietis.LocalizedRoutes": "0.0.0",
+    "Invenietis.LocalizedRoutes.Mvc": "0.0.0",
     "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
     "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
     "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
@@ -19,16 +19,16 @@
     "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
-    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-rc1-final",
     "System.Reflection": "4.1.0-beta-23516"
   },
 
   "commands": {
-    "web": "Microsoft.AspNet.Server.Kestrel"
+    "web": "Microsoft.AspNet.Server.Kestrel",
+    "dbsetup": "CK.SqlServer.DbSetup"
   },
 
   "frameworks": {
-    "dnxcore50": { }
+    "dnx451": { }
   },
 
   "exclude": [
