--- a/CK.SqlServer.DbSetup/project.json
+++ b/CK.SqlServer.DbSetup/project.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "CK.SqlServer.Core": "4.0.0",
     "CK.SqlServer.Parser": "4.0.2",
+    "CK.SqlServer.Parser.Model": "1.0.1",
     "CK.SqlServer.Setup.Engine": "4.0.0",
     "Microsoft.Extensions.Configuration": "1.0.0-rc1-final",
     "Microsoft.Extensions.Configuration.CommandLine": "1.0.0-rc1-final",
@@ -23,6 +24,6 @@
   },
 
   "frameworks": {
-    "net451": { }
+    "dnx451": { }
   }
 }
