--- a/CK.SqlServer.DbSetup/project.lock.json
+++ b/CK.SqlServer.DbSetup/project.lock.json
@@ -2,7 +2,7 @@
   "locked": false,
   "version": 2,
   "targets": {
-    ".NETFramework,Version=v4.5.1": {
+    "DNX,Version=v4.5.1": {
       "CK.Core/4.3.0": {
         "type": "package",
         "compile": {
@@ -365,7 +365,7 @@
         }
       }
     },
-    ".NETFramework,Version=v4.5.1/win7-x86": {
+    "DNX,Version=v4.5.1/win7-x86": {
       "CK.Core/4.3.0": {
         "type": "package",
         "compile": {
@@ -728,7 +728,7 @@
         }
       }
     },
-    ".NETFramework,Version=v4.5.1/win7-x64": {
+    "DNX,Version=v4.5.1/win7-x64": {
       "CK.Core/4.3.0": {
         "type": "package",
         "compile": {
@@ -1433,6 +1433,7 @@
     "": [
       "CK.SqlServer.Core >= 4.0.0",
       "CK.SqlServer.Parser >= 4.0.2",
+      "CK.SqlServer.Parser.Model >= 1.0.1",
       "CK.SqlServer.Setup.Engine >= 4.0.0",
       "Microsoft.Extensions.Configuration >= 1.0.0-rc1-final",
       "Microsoft.Extensions.Configuration.CommandLine >= 1.0.0-rc1-final",
@@ -1441,6 +1442,6 @@
       "Microsoft.Extensions.Configuration.Json >= 1.0.0-rc1-final",
       "Microsoft.Extensions.PlatformAbstractions >= 1.0.0-rc1-final"
     ],
-    ".NETFramework,Version=v4.5.1": []
+    "DNX,Version=v4.5.1": []
   }
 }
