--- a/Invenietis.Database/project.json
+++ b/Invenietis.Database/project.json
@@ -5,8 +5,11 @@
   "tags": [ "" ],
   "projectUrl": "",
   "licenseUrl": "",
-
   "frameworks": {
     "dnx451": { }
+  },
+  "dependencies": {
+    "CK.SqlServer.Core": "4.0.0",
+    "CK.SqlServer.Setup.Model": "4.0.0"
   }
 }
