--- a/Invenietis.Web/project.json
+++ b/Invenietis.Web/project.json
@@ -5,6 +5,8 @@
   },
 
   "dependencies": {
+    "CK.SqlServer.DbSetup": "0.0.0",
+    "Invenietis.Database": "0.0.0",
     "Invenietis.LocalizedRoutes": "0.0.0",
     "Invenietis.LocalizedRoutes.Mvc": "0.0.0",
     "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
