--- a/wrap/Invenietis.Database/project.json
+++ b/wrap/Invenietis.Database/project.json
@@ -12,7 +12,8 @@
         "CK.Setupable.Model": "4.0.0",
         "CK.SqlServer.Core": "4.0.0",
         "CK.SqlServer.Setup.Model": "4.0.0",
-        "CK.StObj.Model": "4.0.0"
+        "CK.StObj.Model": "4.0.0",
+        "CK.DB.Resource": "1.0.0-*"
       }
     }
   }
