--- a/Invenietis.Repositories/Invenietis.Repositories.csproj
+++ b/Invenietis.Repositories/Invenietis.Repositories.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Invenietis.Repositories</RootNamespace>
     <AssemblyName>Invenietis.Repositories</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -46,7 +47,12 @@
     <Compile Include="Query\LearningRepository.cs" />
     <Compile Include="Query\ProjectRepository.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Invenietis.Entities\Invenietis.Entities.csproj">
+      <Project>{4f59a6be-081a-4dfd-9ecc-7ec6e6ceabbf}</Project>
+      <Name>Invenietis.Entities</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
